kubernetes/apps/media/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "immich.ewatkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31449600; includeSubDomains"
      backendRefs:
        - name: immich-server
          port: 2283
